[package]
name = "emap"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", default-features = false, features = [
    "http2",
    "rustls-tls",
] }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "time",
] }
egui = { version = "0.31.0", default-features = false }
geo = { version = "0.28.0", default-features = false }
image = { version = "0.25.5", default-features = false, features = [
    "jpeg",
    "png",
] }

[dev-dependencies]
eframe = { version = "0.31.0", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "wayland",
] }

[[example]]
name = "eframe"
path = "examples/eframe.rs"
